Fix scroll not working on mobile when using walletconnect

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -114,7 +114,6 @@ body {
     padding: env(safe-area-inset-top, 0) env(safe-area-inset-right, 0) env(safe-area-inset-bottom, 0)
         env(safe-area-inset-left, 0);
     overflow-x: hidden !important;
-    overflow-y: scroll !important;
     padding-right: 0 !important;
 }
 ol,
